tests/errors/semantic/E001_mismatch_mod.zy
# totally_wrong_name {
    #> { greet }

    greet() { <~ "hello" }
}
